Fixes/improves positioning of Menu/MenuBar.
Fixes 2 problems with menu positioning:
1. The menus were misaligned w.r.t their parents esp. in
deep hierarchy:
 http://gwt.google.com/samples/Showcase/Showcase.html#!CwMenuBar
and it was way worse in RTL:
 http://gwt.google.com/samples/Showcase/Showcase.html?locale=ar#!CwMenuBar

2. Menu popups were not smart to position themselves to avoid getting
out of window rectangle.

This patch fixes both issues by mimicking the behavior of modern
windowing systems:
For verticals, it will position itself at the side of the menu with
enough space. While doing that it also inherits direction from parent
to keep menu opening direction consistent.
If the menu still ends up out of window rectangle then it will be
aligned on the side that overflows.

Bug: issue 3888
Review-Link: https://gwt-review.googlesource.com/#/c/6110/

--- a/user/src/com/google/gwt/user/theme/chrome/public/gwt/chrome/chrome.css
+++ b/user/src/com/google/gwt/user/theme/chrome/public/gwt/chrome/chrome.css
@@ -320,9 +320,6 @@ a, a:visited, a:hover {
 .gwt-MenuBar-vertical .subMenuIcon-selected {
   background: #cdcdcd;
 }
-.gwt-MenuBarPopup {
-  margin: 0px 0px 0px 3px;
-}
 .gwt-MenuBarPopup .menuPopupTopCenter {
   background: url(images/hborder.png) 0px -12px repeat-x;
 }
