--- a/user/src/com/google/gwt/user/theme/clean/public/gwt/clean/clean.css
+++ b/user/src/com/google/gwt/user/theme/clean/public/gwt/clean/clean.css
@@ -357,9 +357,6 @@ select {
 .gwt-MenuBar-vertical .subMenuIcon-selected {
   background: #E3E8F3;
 }
-.gwt-MenuBarPopup {
-  margin: 0px 0px 0px 3px;
-}
 .gwt-MenuBarPopup .menuPopupTopCenter {
   background: url(images/hborder.png) 0px -12px repeat-x;
 }
